--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_HOST=192.168.100.13
+DB_PORT=3322
+DB_DATABASE=naalemvdb
 DB_USERNAME=root
 DB_PASSWORD=
 
