--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     ports:
     - "3322:3306"
     environment:
+    - MYSQL_DB_DATABASE=naalemvdb
     - MYSQL_ROOT_PASSWORD=
     - MYSQL_ALLOW_EMPTY_PASSWORD=yes
     volumes:
