--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7OOZoltm29f5AStIUPfAGgNJLnkFM4P8APGBI9V5gq0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.100.13
+DB_HOST=192.168.100.4
 DB_PORT=3322
-DB_DATABASE=naalemvdb
+DB_DATABASE=db
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -32,8 +32,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=demo.naalemv@gmail.com
-MAIL_PASSWORD=bhugrnhooligjfth
+MAIL_USERNAME=noreply.naalemv@gmail.com
+MAIL_PASSWORD=vxssmdnppuvpcfaq
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME=Naalemv
 
